[WIP] Proxy jwt bearer to support corporate trust